--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@
     transition: background 0.5s;
 }
 .card .links img:hover{
-    background: #ff01cf;
+    background: #036b03;
 }
 .btn{
     text-decoration: none;
